<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.todo.list.utils.CustomTextView
            android:id="@+id/txtUTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/title"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.todo.list.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/updatemsg"
            android:padding="@dimen/_5sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/holo_green_dark"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <com.todo.list.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/update"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/holo_red_dark"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <com.todo.list.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/delete"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvUCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <com.todo.list.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:singleLine="true"
                    android:text="@string/cancel"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>